--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Livewell Housing Solutions Ltd</h1>
+        <h1>Livewell Housing Solutions Ltd</h1>
+        <p><strong>motto</strong>: ... own your tomorrow.</p>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
