--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 </head>
 <body>
     <header>
-        <h1>Livewell Housing Solutions Ltd</h1>
-        <p><strong>motto</strong>: ... own your tomorrow.</p>
+        <h1>Welcome to Livewell Housing Solutions Ltd</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -170,7 +169,7 @@
                 <source src="/storage/emulated/0/Download/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
-            <a href="/storage/emulated/0/Download/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" download="/storage/emulated/0/Download/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" class="download-link">Download Voice Note</a>
+            <a href="/storage/emulated/0/Download/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" download="Client_Testimonial.mp3" class="download-link">Download Voice Note</a>
         </div>
     </section>
 
@@ -194,14 +193,7 @@
         <p>&copy; 2024 Livewell Housing Solutions Ltd. All rights reserved.</p>
     </footer>
 
-    <script>
-document.getElementById('contact-form').addEventListener('submit', function(event) {
-    event.preventDefault();
-    alert('Thank you for contacting us! We will get back to you soon.');
-});
-
-      
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
 
