--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
         <div class="media-content">
             <h3>Client Testimonial Voice Note</h3>
             <audio controls>
-                <source src="/storage/emulated/0/Download/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" type="audio/mp3">
+                <source src="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
-            <a href="/storage/emulated/0/Download/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" download="Client_Testimonial.mp3" class="download-link">Download Voice Note</a>
+            <a href="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" download="Client_Testimonial.mp3" class="download-link">Download Voice Note</a>
         </div>
     </section>
 
