--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <section id="home">
         <h2>Home</h2>
-        <img src="cover.jpg" alt="Cover Image" class="cover-image">
+        <img src="IMG-20240707-WA0058.jpg" alt="Cover Image" class="cover-image">
         <p>Your trusted partner in housing solutions.</p>
     </section>
 
