--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section id="services">
         <h2>Services</h2>
         <div class="thumbnail-gallery">
-            <img src="service1.jpg" alt="Service 1" class="thumbnail">
+            <img src="IMG-20240707-WA0064.jpg" alt="Rent Palava" class="thumbnail">
             <img src="service2.jpg" alt="Service 2" class="thumbnail">
             <img src="service3.jpg" alt="Service 3" class="thumbnail">
         </div>
