--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h2>Services</h2>
         <div class="thumbnail-gallery">
             <img src="IMG-20240707-WA0064.jpg" alt="Rent Palava" class="thumbnail">
-            <img src="service2.jpg" alt="Service 2" class="thumbnail">
+            <img src="IMG-20240710-WA0311.jpg" alt="Hiring Community Managers" class="thumbnail">
             <img src="service3.jpg" alt="Service 3" class="thumbnail">
         </div>
         <ul>
