--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <section id="about">
         <h2>About Us</h2>
-        <img src="about.jpg" alt="About Us Image" class="cover-image">
+        <img src="src="IMG-20240707-WA0058.jpg" alt="Livewell Housing Solutions Ltd" class="cover-image">
         <p>Livewell Housing Solutions Ltd is dedicated to providing quality housing solutions and expert advice on property management.</p>
     </section>
 
