--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="thumbnail-gallery">
             <img src="IMG-20240707-WA0064.jpg" alt="Rent Palava" class="thumbnail">
             <img src="IMG-20240710-WA0311.jpg" alt="Hiring Community Managers" class="thumbnail">
-            <img src="service3.jpg" alt="Service 3" class="thumbnail">
+            <img src="IMG-20240708-WA0378.jpg" alt="Ease Rent" class="thumbnail">
         </div>
         <ul>
             <li>Loan Requests</li>
@@ -149,7 +149,7 @@
 
     <section id="about">
         <h2>About Us</h2>
-        <img src="src="IMG-20240707-WA0058.jpg" alt="Livewell Housing Solutions Ltd" class="cover-image">
+        <img src="IMG-20240707-WA0058.jpg" alt="Livewell Housing Solutions Ltd" class="cover-image">
         <p>Livewell Housing Solutions Ltd is dedicated to providing quality housing solutions and expert advice on property management.</p>
     </section>
 
