--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
             <img src="IMG-20240708-WA0378.jpg" alt="Ease Rent" class="thumbnail">
         </div>
         <ul>
-            <li>Loan Requests</li>
-            <li>Property Management</li>
-            <li>Real Estate Consultancy</li>
+            <li>Ease Rent</li>
+            <li>Lease Plan</li>
+            <li>Co-operative Community</li>
+<li>Property Management</li>
+<li>Real Estate Consultancy</li>
         </ul>
     </section>
 
@@ -164,7 +166,7 @@
             <a href="overview.mp4" download="overview.mp4" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
-            <h3>Client Testimonial Voice Note</h3>
+            <h3>Business Model Voice Note</h3>
             <audio controls>
                 <source src="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" type="audio/mp3">
                 Your browser does not support the audio element.
