--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Livewell Housing Solutions Ltd</h1>
+        <h1>Livewell Housing Solutions Ltd</h1>
+        <p><strong>Motto</strong>: <italic>...own your tomorrow</italic></p>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -171,7 +172,7 @@
                 <source src="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
-            <a href="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" download="Client_Testimonial.mp3" class="download-link">Download Voice Note</a>
+            <a href="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" download="Business Model.mp3" class="download-link">Download Voice Note</a>
         </div>
     </section>
 
