--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <body>
     <header>
         <h1>Livewell Housing Solutions Ltd</h1>
-        <p><strong>Motto</strong>: <italic>...own your tomorrow</italic></p>
+        <p><strong>Motto</strong>: <i>...own your tomorrow</i>.</p>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
