--- a/index.html
+++ b/index.html
@@ -196,7 +196,13 @@
         <p>&copy; 2024 Livewell Housing Solutions Ltd. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+document.getElementById('contact-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            alert('Thank you for contacting us! We will get back to you soon.');
+        });
+        
+    </script>
 </body>
 </html>
 
