--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
 
     <section id="home">
         <h2>Home</h2>
-        <img src="IMG-20240707-WA0058.jpg" alt="Cover Image" class="cover-image">
+        <img src="/IMG-20240707-WA0058.jpg" alt="Cover Image" class="cover-image">
         <p>Your trusted partner in housing solutions.</p>
     </section>
 
     <section id="services">
         <h2>Services</h2>
         <div class="thumbnail-gallery">
-            <img src="IMG-20240707-WA0064.jpg" alt="Rent Palava" class="thumbnail">
-            <img src="IMG-20240710-WA0311.jpg" alt="Hiring Community Managers" class="thumbnail">
-            <img src="IMG-20240708-WA0378.jpg" alt="Ease Rent" class="thumbnail">
+            <img src="/IMG-20240707-WA0064.jpg" alt="Rent Palava" class="thumbnail">
+            <img src="/IMG-20240710-WA0311.jpg" alt="Hiring Community Managers" class="thumbnail">
+            <img src="/IMG-20240708-WA0378.jpg" alt="Ease Rent" class="thumbnail">
         </div>
         <ul>
             <li>Ease Rent</li>
@@ -152,7 +152,7 @@
 
     <section id="about">
         <h2>About Us</h2>
-        <img src="IMG-20240707-WA0058.jpg" alt="Livewell Housing Solutions Ltd" class="cover-image">
+        <img src="/IMG-20240707-WA0058.jpg" alt="Livewell Housing Solutions Ltd" class="cover-image">
         <p>Livewell Housing Solutions Ltd is dedicated to providing quality housing solutions and expert advice on property management.</p>
     </section>
 
@@ -161,10 +161,10 @@
         <div class="media-content">
             <h3>Company Overview Video</h3>
             <video controls>
-                <source src="overview.mp4" type="video/mp4">
+                <source src="/VID-20240702-WA0184.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <a href="overview.mp4" download="overview.mp4" class="download-link">Download Video</a>
+            <a href="/VID-20240702-WA0184.mp4" download="Company Overview.mp4" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
             <h3>Business Model Voice Note</h3>
