--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                 <source src="/VID-20240702-WA0184.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <a href="/VID-20240702-WA0184.mp4" download="Company Overview.mp4" class="download-link">Download Video</a>
+            <a href="/VID-20240702-WA0184.mp4" download="Company Overview.mp4" class="download-link" width: 100%;>Download Video</a>
         </div>
         <div class="media-content">
-            <h3>Business Model Voice Note</h3>
+            <h3> Listen to the Business Model </h3>
             <audio controls>
                 <source src="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" type="audio/mp3">
                 Your browser does not support the audio element.
