--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
         }
 
         header {
+            
+            text-align: center;
+
+
+
+            padding: 1em;
             background-color: #4CAF50;
             color: white;
-            padding: 1em 0;
-            text-align: center;
+            position: relative; /* Change to relative */
+            width: 100%;
+            top: 0;
+            
         }
 
         nav ul {
