--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
         <div class="media-content">
             <h3>Company Overview Video</h3>
             <video controls>
-                <source src="/VID-20240702-WA0184.mp4" type="video/mp4" "width: 70%;" "height: 70%;">
+                <source src="/VID-20240702-WA0185(1).mp4" type="video/mp4" "width: 70%;" "height: 70%;">
                 Your browser does not support the video tag.
             </video>
-            <a href="/VID-20240702-WA0184.mp4" download="Company Overview.mp4" class="download-link" "width: 70%;" "height: 70%;">Download Video</a>
+            <a href="/VID-20240702-WA0185(1).mp4" download="Company Overview.mp4" class="download-link" "width: 70%;" "height: 70%;">Download Video</a>
         </div>
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
