--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             padding: 1em;
             background-color: #4CAF50;
             color: white;
-            position: relative; /* Change to relative */
+            position: relative;
             width: 100%;
             top: 0;
         }
@@ -81,7 +81,7 @@
             padding: 1em;
             background-color: #4CAF50;
             color: white;
-            position: relative; /* Change to relative */
+            position: relative;
             width: 100%;
             bottom: 0;
         }
@@ -89,7 +89,7 @@
         form {
             display: flex;
             flex-direction: column;
-            padding-bottom: 60px; /* Add padding to bottom to prevent overlap */
+            padding-bottom: 60px;
         }
 
         form label {
@@ -170,7 +170,7 @@
             <a href="VID-20240702-WA0185(1).mp4" download="Company Overview.mp4" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
-            <h3> Listen to the Business Model </h3>
+            <h3>Listen to the Business Model</h3>
             <audio controls>
                 <source src="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" type="audio/mp3">
                 Your browser does not support the audio element.
@@ -197,6 +197,7 @@
 
     <footer>
         <p>&copy; 2024 Livewell Housing Solutions Ltd. All rights reserved.</p>
+        <p><a href="mailto:mondaykingsley80@gmail.com">mondaykingsley80@gmail.com</a> | <a href="mailto:livewell.equity@gmail.com">livewell.equity@gmail.com</a></p>
     </footer>
 
     <script>
@@ -207,6 +208,5 @@
     </script>
 </body>
 </html>
-
 
 
