--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         .media-content {
             margin-bottom: 2em;
-            padding: 20px;
+            padding: 20px 20px;
         }
 
         .download-link {
