--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
         }
 
         .media-content {
-            margin-bottom: 2em;
-            padding: 20px 20px;
+            width: 100%;
+            height: auto;
+            margin-bottom: 1em;
+            
         }
 
         .download-link {
