--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="media-content">
             <h3>Company Overview Video</h3>
             <video controls>
-                <source src="/VID-20240702-WA0184.mp4" type="video/mp4" width: 50px; height: 50px;>
+                <source src="/VID-20240702-WA0184.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <a href="VID-20240702-WA0184.mp4" download="Company Overview.mp4" class="download-link">Download Video</a>
