--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
         <div class="media-content">
             <h3>Company Overview Video</h3>
             <video controls>
-                <source src="/VID-20240702-WA0185(3).mp4" type="video/mp4">
+                <source src="VID-20240702-WA0185(2).mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <a href="VID-20240702-WA0185(3).mp4" download="Company Overview.mp4" class="download-link">Download Video</a>
+            <a href="VID-20240702-WA0185(2).mp4" download="Company Overview.mp4" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
