--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         .media-content {
             width: 100%;
-            height: auto;
+            height: 100%;
             margin-bottom: 1em;
         }
 
