--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         }
 
         .media-content {
-            width: 100%;
-            height: 100%;
+            width: 40px;
+            height: 40px;
             margin-bottom: 1em;
         }
 
