--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         }
 
         .media-content {
-            width: 40px;
-            height: 40px;
+            width: 40%;
+            height: 40%;
             margin-bottom: 1em;
         }
 
