--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         }
 
         .media-content {
-            width: 40%;
-            height: 40%;
+            width: 100%;
+            height: auto;
             margin-bottom: 1em;
         }
 
@@ -116,6 +116,11 @@
 
         form button:hover {
             background-color: #45a049;
+        }
+        
+        video {
+            width: 100%;
+            height: auto;
         }
     </style>
 </head>
