--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
         <div class="media-content">
             <h3>Company Overview Video</h3>
             <video controls>
-                <source src="‎Thi_is_so_nice‎20240702‎_Phoenix.mp4" type="video/mp4">
+                <source src="/lv-0-20240716222800.MP4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <a href="‎Thi_is_so_nice‎20240702‎_Phoenix.mp4" download="Company Overview.mp4" class="download-link">Download Video</a>
+            <a href="‎/lv-0-20240716222800.MP4" download="Company Overview.mp4" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
