--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <h2>About Us</h2>
         <img src="/IMG-20240707-WA0058.jpg" alt="Livewell Housing Solutions Ltd" class="cover-image">
         <p>Livewell Housing Solutions Ltd is dedicated to providing quality housing solutions and expert advice on property management.</p>
-        <button onclick="showBusinessModel()">Important: Click Me</button>
+        <button onclick="showBusinessModel()">Important: ***Business Model of Livewell Housing Solutions Limited***</button>
     </section>
 
     <section id="media">
