--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
         <div class="media-content">
             <h3>Company Overview Video</h3>
             <video controls onplay="playMedia(this)">
-                <source src="/lv-0-20240716222800.MP4; VID-20240717-WA0187.mp4" type="video/mp4">
+                <source src="/lv-0-20240716222800.MP4 " type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <a href="#" onclick="downloadMedia('/lv-0-20240716222800.MP4'VID-20240717-WA0187.mp4  )" class="download-link">Download Video</a>
+            <a href="#" onclick="downloadMedia('/lv-0-20240716222800.MP4' )" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
