--- a/index.html
+++ b/index.html
@@ -344,8 +344,7 @@
         <p>Livewell Housing Solution Ltd is dedicated to providing innovative and accessible housing solutions.</p>
         <p><strong>Our Commitment:</strong> Empowering you to "Own Your Tomorrow" with financial flexibility and security.</p>
         <p><strong>Join Us:</strong> Be part of a community that values your future and works towards making your housing dreams a reality.</p>
-
-        <div class="button-container">
+<p>Our office is at shop 45, Semiso plaza No15 Ijegun road ikotun, old garage ikotun.Beside Addosser microfinance bank.</p>
             <button onclick="hideBusinessModel()">Go Back</button>
             <button onclick="scrollToTop()">Move to Top</button>
         </div>
