--- a/index.html
+++ b/index.html
@@ -316,7 +316,12 @@
         <p><strong>Membership Fee:</strong> #10,000 (Naira) (one time).</p>
         <p><strong>Savings:</strong> #10,000 (Naira) (monthly payment) minimum and maximum any amount.</p>
         <p><strong>Loan Terms:</strong> One-time interest fee of 1.5%.</p>
-        <p><strong>Member Benefits:</strong> Free housing benefits and incentives.</p>
+        <p><strong>Member Benefits:</strong> As you are consistent with your savings with little or no withdrawal can be considered for some free housing benefits and incentives in the future.</p>
+        <h4>4. Investors </h4>
+        <p><strong>Objectives </strong>Investors are the live wire of every business. Investors funds set the business to its continuity. So Livewell has the biggest room and space for all investors. We say you are warmly welcome.</p>
+        <p><strong>Membership Fee:</strong> #10,000 (Naira) (one time).</p>
+        <p><strong>Member Benefits:</strong> No amount is considered little, your investment attracts 10% interest annually.</p>
+        
 
         <h3>Organizational Structure:</h3>
         <p><strong>Hybrid Operations System.</strong></p>
