--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         
         <button class="unread-message-button" onclick="showBusinessModel()">
             <h3>UN READ MESSAGE</h3>
-            <img src="/storage/emulated/0/Download/New Message Flat Icon, Email and Website Button Stock Vector - Illustration of favorite, forum_ 91687771.jpeg" alt="Business Model Image" class="small-image">
+            <img src="/New Message Flat Icon, Email and Website Button Stock Vector - Illustration of favorite, forum_ 91687771.jpeg" alt="Business Model Image" class="small-image">
         </button>
     </section>
 
