--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 window.location.href = '#business-model';
             } else {
                 messageText.textContent = 'UNREAD MESSAGE';
-                messageIcon.src = '/storage/emulated/0/Download/New Message Flat Icon, Email and Website Button Stock Vector - Illustration of favorite, forum_ 91687771.jpeg';
+                messageIcon.src = '/New Message Flat Icon, Email and Website Button Stock Vector - Illustration of favorite, forum_ 91687771.jpeg';
                 businessModel.style.display = 'none';
                 window.location.href = '#about';
             }
