--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
             if (messageText.textContent === 'UNREAD MESSAGE') {
                 messageText.textContent = 'READ MESSAGE';
-                messageIcon.src = '/storage/emulated/0/Download/84tpIkbEsTge4.png!sw800.png';
+                messageIcon.src = '/84tpIkbEsTge4.png!sw800.png';
                 businessModel.style.display = 'block';
                 window.location.href = '#business-model';
             } else {
