--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
             <audio controls onplay="playMedia(this)">
-                <source src="/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3" type="audio/mp3">
+                <source src="/lv_0_20240720130923-[AudioTrimmer.com].mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
-            <a href="#" onclick="downloadMedia('/PTT-20240710-WA0082 (1)- (online-audio-converter.com).mp3')" class="download-link">Download Voice Note</a>
+            <a href="#" onclick="downloadMedia('/lv_0_20240720130923-[AudioTrimmer.com].mp3')" class="download-link">Download Voice Note</a>
         </div>
     </section>
 
