--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
         <div class="media-content">
             <h3>Company Overview Video</h3>
             <video controls onplay="playMedia(this)">
-                <source src="/lv-0-20240716222800.MP4 " type="video/mp4">
+                <source src="/VID-20240725-WA0167.mp4 " type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <a href="#" onclick="downloadMedia('/lv-0-20240716222800.MP4' )" class="download-link">Download Video</a>
+            <a href="#" onclick="downloadMedia('/VID-20240725-WA0167.mp4' )" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
