--- a/index.html
+++ b/index.html
@@ -235,19 +235,19 @@
             const audio = document.getElementById('audio');
             switch (language) {
                 case 'yoruba':
-                    audioSource.src = '/path/to/yoruba-audio.mp3';
+                    audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
                     break;
                 case 'igbo':
-                    audioSource.src = '/path/to/igbo-audio.mp3';
+                    audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
                     break;
                 case 'hausa':
-                    audioSource.src = '/path/to/hausa-audio.mp3';
+                    audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
                     break;
                 case 'pigin':
-                    audioSource.src = '/path/to/pigin-audio.mp3';
+                    audioSource.src = '/storage/emulated/0/Download/AUD-20240720-WA0182..mp3';
                     break;
                 default:
-                    audioSource.src = '/path/to/english-audio.mp3';
+                    audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
             }
             audio.load();
             audio.play();
@@ -369,10 +369,10 @@
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
             <audio id="audio" controls onplay="playMedia(this)">
-                <source id="audio-source" src="/lv_0_20240720130923-[AudioTrimmer.com].mp3" type="audio/mp3">
+                <source id="audio-source" src=" " type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
-            <a href="#" onclick="downloadMedia('/lv_0_20240720130923-[AudioTrimmer.com].mp3')" class="download-link">Download Voice Note</a>
+            <a href="#" onclick="downloadMedia(' ')" class="download-link">Download Voice Note</a>
             <br>
             <label for="language-select">Select Language:</label>
             <select id="language-select" onchange="changeAudioLanguage(this.value)">
