--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             const audio = document.getElementById('audio');
             switch (language) {
                 case 'yoruba':
-                    audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/storage/emulated//PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
                     break;
                 case 'igbo':
                     audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
@@ -247,7 +247,7 @@
                     audioSource.src = '/storage/emulated/0/Download/AUD-20240720-WA0182..mp3';
                     break;
                 default:
-                    audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
             }
             audio.load();
             audio.play();
