--- a/index.html
+++ b/index.html
@@ -235,16 +235,16 @@
             const audio = document.getElementById('audio');
             switch (language) {
                 case 'yoruba':
-                    audioSource.src = '/storage/emulated//PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
                     break;
                 case 'igbo':
-                    audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
                     break;
                 case 'hausa':
-                    audioSource.src = '/storage/emulated/0/Download/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
                     break;
                 case 'pigin':
-                    audioSource.src = '/storage/emulated/0/Download/AUD-20240720-WA0182..mp3';
+                    audioSource.src = '/AUD-20240720-WA0182..mp3';
                     break;
                 default:
                     audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
