--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
                     break;
                 case 'pigin':
-                    audioSource.src = '/AUD-20240720-WA0182..mp3';
+                    audioSource.src = '/AUD-20240720-WA0182.mp3';
                     break;
                 default:
                     audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
