--- a/index.html
+++ b/index.html
@@ -235,19 +235,19 @@
             const audio = document.getElementById('audio');
             switch (language) {
                 case 'yoruba':
-                    audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
                     break;
                 case 'igbo':
-                    audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
                     break;
                 case 'hausa':
-                    audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
                     break;
                 case 'pigin':
                     audioSource.src = '/AUD-20240720-WA0182.mp3';
                     break;
                 default:
-                    audioSource.src = '/PTT-20240710-WA0082 (12)- (online-audio-converter.com) (1).mp3';
+                    audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
             }
             audio.load();
             audio.play();
