--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
                     break;
                 case 'pigin':
-                    audioSource.src = '/AUD-20240720-WA0182.mp3';
+                    audioSource.src = '/AUD-20240720-WA0182..mp3';
                     break;
                 default:
                     audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
