--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             const subject = 'Contact Form Submission';
             const body = `Name: ${name}\nEmail: ${email}\nMessage: ${message}`;
 
-            const mailtoLink = `mailto:mondaykingsley80@gmail.com?cc=${email}&subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+            const mailtoLink = `mailto:livewell.equity@gmail.com?cc=${email}&subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
             window.location.href = mailtoLink;
         }
 
