--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
     <section id="services">
         <h2>Services</h2>
         <div class="thumbnail-gallery">
-            <img src="/IMG-20240707-WA0064.jpg" alt="Rent Palava" class="thumbnail">
-            <img src="/IMG-20240710-WA0311.jpg" alt="Hiring Community Managers" class="thumbnail">
+            <img src="/IMG-20240707-WA0064.jpg" alt="lease plan" class="thumbnail">
+            <img src="/IMG-20240726-WA0127.jpg" alt="community housing cooperative" class="thumbnail">
             <img src="/IMG-20240708-WA0378.jpg" alt="Ease Rent" class="thumbnail">
         </div>
         <ul>
