--- a/index.html
+++ b/index.html
@@ -235,16 +235,16 @@
             const audio = document.getElementById('audio');
             switch (language) {
                 case 'yoruba':
-                    audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
+                    audioSource.src = '/llv_0_20240720130923-[AudioTrimmer.com].mp3';
                     break;
                 case 'igbo':
-                    audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
+                    audioSource.src = '/llv_0_20240720130923-[AudioTrimmer.com].mp3';
                     break;
                 case 'hausa':
-                    audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
+                    audioSource.src = '/llv_0_20240720130923-[AudioTrimmer.com].mp3';
                     break;
                 case 'pigin':
-                    audioSource.src = '/AUD-20240720-WA0182..mp3';
+                    audioSource.src = '/AAUD-20240720-WA0182..mp3';
                     break;
                 default:
                     audioSource.src = '/lv_0_20240720130923-[AudioTrimmer.com].mp3';
@@ -361,10 +361,10 @@
         <div class="media-content">
             <h3>Company Overview Video</h3>
             <video controls onplay="playMedia(this)">
-                <source src="/VID-20240725-WA0167.mp4 " type="video/mp4">
+                <source src="/lv_0_20240727041356_20240727_042323 (1).mp4 " type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <a href="#" onclick="downloadMedia('/VID-20240725-WA0167.mp4' )" class="download-link">Download Video</a>
+            <a href="#" onclick="downloadMedia('/lv_0_20240727041356_20240727_042323 (1).mp4' )" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
