--- a/index.html
+++ b/index.html
@@ -649,15 +649,15 @@
             <h3>Company Overview Video</h3>
         <div class="video-container">
             <div class="thumbnail-container">
-                <img class="thumbnail" src="/storage/emulated/0/Documents/pixelLab/20240804_135541.jpg" alt="Thumbnail 1" data-video-url="/storage/emulated/0/Download/lv_0_20240804103319_compressed.mp4" onclick="playVideo(this)">
-                <img class="thumbnail" src="/storage/emulated/0/Documents/pixelLab/20240804_135619.jpg" alt="Thumbnail 2" data-video-url="/storage/emulated/0/Download/lv_0_20240804104327_compressed.mp4" onclick="playVideo(this)">
-                <img class="thumbnail" src="/storage/emulated/0/Documents/pixelLab/20240804_135652.jpg" alt="Thumbnail 3" data-video-url="/storage/emulated/0/Download/lv_0_20240804105611_compressed.mp4" onclick="playVideo(this)">
+                <img class="thumbnail" src="/pixelLab/20240804_135541.jpg" alt="Thumbnail 1" data-video-url="/lv_0_20240804103319_compressed.mp4" onclick="playVideo(this)">
+                <img class="thumbnail" src="/pixelLab/20240804_135619.jpg" alt="Thumbnail 2" data-video-url="/lv_0_20240804104327_compressed.mp4" onclick="playVideo(this)">
+                <img class="thumbnail" src="/pixelLab/20240804_135652.jpg" alt="Thumbnail 3" data-video-url="/lv_0_20240804105611_compressed.mp4" onclick="playVideo(this)">
             </div>
             <video id="main-video" class="main-video" controls>
-                <source src="/storage/emulated/0/Download/lv_0_20240804103319_compressed.mp4" type="video/mp4">
+                <source src="/lv_0_20240804103319_compressed.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <a href="#" onclick="downloadMedia('/lv_0_20240727041356_20240727_042323 (1).mp4' )" class="download-link">Download Video</a>
+            <a href="#" onclick="downloadMedia('/lv_0_20240804103319_compressed.mp4' )" class="download-link">Download Video</a>
         </div>
         <div class="media-content">
             <h3> Listen to the Business Model </h3>
