--- a/index.html
+++ b/index.html
@@ -649,9 +649,9 @@
             <h3>Company Overview Video</h3>
         <div class="video-container">
             <div class="thumbnail-container">
-                <img class="thumbnail" src="/pixelLab/20240804_135541.jpg" alt="Thumbnail 1" data-video-url="/lv_0_20240804103319_compressed.mp4" onclick="playVideo(this)">
-                <img class="thumbnail" src="/pixelLab/20240804_135619.jpg" alt="Thumbnail 2" data-video-url="/lv_0_20240804104327_compressed.mp4" onclick="playVideo(this)">
-                <img class="thumbnail" src="/pixelLab/20240804_135652.jpg" alt="Thumbnail 3" data-video-url="/lv_0_20240804105611_compressed.mp4" onclick="playVideo(this)">
+                <img class="thumbnail" src="/20240804_135541.jpg" alt=" part 1" data-video-url="/lv_0_20240804103319_compressed.mp4" onclick="playVideo(this)">
+                <img class="thumbnail" src="/20240804_135619.jpg" alt="part 2" data-video-url="/lv_0_20240804104327_compressed.mp4" onclick="playVideo(this)">
+                <img class="thumbnail" src="/20240804_135652.jpg" alt="part 3" data-video-url="/lv_0_20240804105611_compressed.mp4" onclick="playVideo(this)">
             </div>
             <video id="main-video" class="main-video" controls>
                 <source src="/lv_0_20240804103319_compressed.mp4" type="video/mp4">
