--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                 <img class="thumbnail" src="/20240804_135652.jpg" alt="part 3" data-video-url="/lv_0_20240804105611_compressed.mp4" onclick="playVideo(this)">
             </div>
             <video id="main-video" class="main-video" controls>
-                <source src="/lv_0_20240804103319_compressed.mp4" type="video/mp4">
+                <source src="/VID-20240807-WA0015.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <a href="#" onclick="downloadMedia('/lv_0_20240804103319_compressed.mp4' )" class="download-link">Download Video</a>
