--- a/index.html
+++ b/index.html
@@ -570,8 +570,7 @@
         </div>
         <ul>
             <li>Ease Rent</li>
-            <li>Lease Plan</li>
-            <li>Co-operative Community</li>
+            <li>Home Ownership</li>
             <li>Property Management</li>
             <li>Real Estate Consultancy</li>
         </ul>
